src/objects/Risk__c.object
<CustomObject>
    <fields>
        <fullName>AddRiskToKBLib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Risk to Knowledge Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignedto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a person that will have primary responsibility for managing this risk.</inlineHelpText>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RisksAssignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssociatedTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is the risk related to a specific project task?  If yes, select from the drop down list.</inlineHelpText>
        <label>Associated Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Task__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>RisksAssociatedTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssumptionDescription__c</fullName>
        <label>Assumption Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssumptionStatus__c</fullName>
        <label>Assumption Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current/Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BudgetGuidanceNumber__c</fullName>
        <formula>ContingencyDollars__c *  ContingencyPercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Guidance Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <inlineHelpText>Describe the &quot;root cause&quot; of the risk (i.e., why is this event occurring?). Typical sources include, but are not limited to, people, equipment, tools, materials, measurements, environment or methods, such as policies, procedures, regulations or laws.</inlineHelpText>
        <label>Cause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContingencyDollars__c</fullName>
        <description>Automatic calculation of (pre-mitigation labor + pre-mitigation ODC cost)</description>
        <formula>IF(LaborCost__c +  ODCCost__c &gt; 0 ,LaborCost__c +  ODCCost__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated pre-mitigation contingency costs [Total Costs = Labor + Subs/ODCs]</inlineHelpText>
        <label>Pre-mitigation Contingency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContingencyPercent__c</fullName>
        <label>Contingency (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentStatus__c</fullName>
        <inlineHelpText>Select the current status of the risk from the drop down list.</inlineHelpText>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed - Unmitigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed - Mitigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoATrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically ticked if the risk is a DoA trigger transferred from the Risk &amp; Market Assessment.</inlineHelpText>
        <label>DoA Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effect__c</fullName>
        <inlineHelpText>Describe the effect (or impact) the risk will have on the project.</inlineHelpText>
        <label>Effect</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventPhase__c</fullName>
        <inlineHelpText>What phase of the project does the risk primarily apply to? Select from the drop down list.</inlineHelpText>
        <label>Event Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LaborCost__c</fullName>
        <inlineHelpText>Provide the estimated contingency labor costs (include Raw + Fringe + OH) before implementing the proposed mitigation plan.</inlineHelpText>
        <label>Pre-mitigation Cost (Labor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LikelihoodofOccurrence__c</fullName>
        <inlineHelpText>What is the likelihood of this risk occurring? Select from the drop down list. 

&quot;Possible&quot; is if the risk could happen or has happened on other projects. &quot;Likely&quot; is if the risk could easily happen or has occurred on previous projects more than once.</inlineHelpText>
        <label>Pre-mitigation likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MitigationCostLabor__c</fullName>
        <inlineHelpText>Provide the estimated contingency labor costs (include Raw + Fringe + OH) to implement the proposed mitigation plan.</inlineHelpText>
        <label>Mitigation Cost (Labor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MitigationCostSubsODCs__c</fullName>
        <inlineHelpText>Provide the estimated contingency costs for subcontractors, subconsultants, vendors and other direct costs (ODCs) to implement the proposed mitigation plan.</inlineHelpText>
        <label>Mitigation Cost (Subs/ODCs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MitigationCostTotal__c</fullName>
        <formula>IF(MitigationCostLabor__c +  MitigationCostSubsODCs__c &gt; 0,MitigationCostLabor__c +  MitigationCostSubsODCs__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated costs to mitigate the risk [Total Cost = AECOM Labor + Subs/ODCs]</inlineHelpText>
        <label>Mitigation Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MitigationEffectiveness__c</fullName>
        <inlineHelpText>How effective do you believe the mitigation strategies outlined will be in mitigating the risk? 1 being the least effective and 10 being the most.</inlineHelpText>
        <label>Mitigation Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mitigationbasisofestimate__c</fullName>
        <inlineHelpText>Provide a brief explanation of how the mitigation costs were derived, including assumptions, estimated quantities, durations, resources, cost sourcing, etc.</inlineHelpText>
        <label>Mitigation basis of estimate</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ODCCost__c</fullName>
        <inlineHelpText>Provide the estimated contingency costs for subcontractors, subconsultants, vendors and other direct costs (ODCs) before implementing the proposed mitigation plan.</inlineHelpText>
        <label>Pre-mitigation Cost (Subs/ODCs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityFromRisk__c</fullName>
        <inlineHelpText>Describe here any potential opportunities or benefits that may arise as a result of this risk (e.g., variation, follow-on work).</inlineHelpText>
        <label>Opportunity From Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanElement__c</fullName>
        <inlineHelpText>Which element of the project plan of the project does this affect? Select from the drop down list.</inlineHelpText>
        <label>Plan Element</label>
        <picklist>
            <picklistValues>
                <fullName>Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subs/Vendors</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PostRiskMatrix__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ECO_RiskMatrix&quot;,&quot;Risk Matrix&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matrix used to determine Risk Rating based on likelihood and consequence values.</inlineHelpText>
        <label>Risk Rating Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostmitigationContingencyLabor__c</fullName>
        <inlineHelpText>Provide the estimated contingency labor costs (include Raw + Fringe + OH) after implementing the proposed mitigation plan.</inlineHelpText>
        <label>Post-mitigation Contingency (Labor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostmitigationContingencySubsODCs__c</fullName>
        <inlineHelpText>Provide the estimated contingency costs for subcontractors, subconsultants, vendors and other direct costs (ODCs) after implementing the proposed mitigation plan.</inlineHelpText>
        <label>Post-mitigation Contingency (Subs/ODCs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostmitigationContingencyTotal__c</fullName>
        <formula>PostmitigationContingencyLabor__c +   PostmitigationContingencySubsODCs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated post-mitigation contingency costs [Total  = Labor + Subs/ODCs]</inlineHelpText>
        <label>Post-mitigation Contingency Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postmitigationbasisofestimate__c</fullName>
        <inlineHelpText>Provide a brief explanation of how the contingency costs were derived, including assumptions, estimated quantities, durations, resources, cost sourcing, etc.</inlineHelpText>
        <label>Post-mitigation basis of estimate</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postmitigationconsequence__c</fullName>
        <inlineHelpText>What is the impact of this risk occurring? Select from the drop down list.</inlineHelpText>
        <label>Post-mitigation consequence</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postmitigationlikelihood__c</fullName>
        <inlineHelpText>What is the likelihood of this risk occurring? Select from the drop down list.

&quot;Possible&quot; is if the risk could happen or has happened on other projects. &quot;Likely&quot; is if the risk could easily happen or has occurred on previous projects more than once.</inlineHelpText>
        <label>Post-mitigation likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postmitigationrating__c</fullName>
        <inlineHelpText>Using the likelihood and consequence selections, refer to the Risk Matrix to determine the risk rating (High, Medium, Low).</inlineHelpText>
        <label>Post-mitigation rating</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PotentialCosts__c</fullName>
        <label>Potential Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreRiskMatrix__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ECO_RiskMatrix&quot;,&quot;Risk Matrix&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Matrix used to determine Risk Rating based on likelihood and consequence values.</inlineHelpText>
        <label>Risk Rating Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premitigationbasisofestimate__c</fullName>
        <inlineHelpText>Provide a brief explanation of how the contingency costs were derived, including assumptions, estimated quantities, durations, resources, cost sourcing, etc.</inlineHelpText>
        <label>Pre-mitigation basis of estimate</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premitigationrating__c</fullName>
        <inlineHelpText>Using the likelihood and consequence selections, refer to the Risk Matrix to determine the risk rating (High, Medium, Low).</inlineHelpText>
        <label>Pre-mitigation rating</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Risk Register</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskCategory__c</fullName>
        <label>Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskConsequence__c</fullName>
        <inlineHelpText>What is the impact of this risk occurring? Select from the drop down list.</inlineHelpText>
        <label>Pre-mitigation consequence</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskDescription__c</fullName>
        <inlineHelpText>Description of the potential risk.</inlineHelpText>
        <label>Risk Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskMitigation__c</fullName>
        <inlineHelpText>Outline which measures you will employ to manage or mitigate the risk.</inlineHelpText>
        <label>Mitigation Strategy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskNumberAutoNum__c</fullName>
        <displayFormat>Risk-{0}</displayFormat>
        <inlineHelpText>System-generated number for reference purposes only.</inlineHelpText>
        <label>Risk Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RiskNumber__c</fullName>
        <label>Risk Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RiskOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identify a resource that will have primary responsibility for owning and managing this risk.</inlineHelpText>
        <label>Risk Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskProbability__c</fullName>
        <label>Risk Probability</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskScore__c</fullName>
        <formula>IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Possible&quot;),ISPICKVAL(RiskConsequence__c,&quot;Moderate&quot;)),15,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Possible&quot;),ISPICKVAL(RiskConsequence__c,&quot;Major&quot;)),20,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Possible&quot;),ISPICKVAL(RiskConsequence__c,&quot;Catastrophic&quot;)),25,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Likely&quot;),ISPICKVAL(RiskConsequence__c,&quot;Moderate&quot;)),30,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Likely&quot;),ISPICKVAL(RiskConsequence__c,&quot;Major&quot;)),40,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Likely&quot;),ISPICKVAL(RiskConsequence__c,&quot;Catastrophic&quot;)),50,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Probable&quot;),ISPICKVAL(RiskConsequence__c,&quot;Moderate&quot;)),60,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Probable&quot;),ISPICKVAL(RiskConsequence__c,&quot;Major&quot;)),80,
IF(AND(ISPICKVAL(LikelihoodofOccurrence__c,&quot;Probable&quot;),ISPICKVAL(RiskConsequence__c,&quot;Catastrophic&quot;)),100,null)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>What is the origin of the risk? Select from the drop down list.</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Project-Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xxRiskMatrix__c</fullName>
        <formula>IMAGE(&quot;/resource/EcoRiskGridImage&quot;, &quot;&quot;,250,450)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxRisk Matrix</label>
        <type>Text</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RiskDescription__c</columns>
        <columns>LikelihoodofOccurrence__c</columns>
        <columns>RiskConsequence__c</columns>
        <columns>RiskScore__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Risk Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>